z-index fix for drawer overlay

--- a/SalesDashboard/Layouts/Main/MainLayout.razor.css
+++ b/SalesDashboard/Layouts/Main/MainLayout.razor.css
@@ -10,7 +10,7 @@
     width: 100%;
     height: var(--bar-height);
     position: absolute;
-    z-index: 3;
+    z-index: 6;
 }
 
 .drawer-container {
@@ -27,7 +27,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 4;
     transition: opacity var(--drawer-animation-duration) var(--drawer-animation-easing);
     background-color: rgba(0, 0, 0, .6);
 }
@@ -38,7 +38,7 @@
     height: 100%;
     position: absolute;
     overflow-y: auto;
-    z-index: 2;
+    z-index: 5;
     transition: left var(--drawer-animation-duration) var(--drawer-animation-easing);
 }
 
